--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <div class="portfolio_thumb">
                             <img src="media/joboard.png" alt="recent work 3">
                         </div>
-                        <h3 class="port_title">Job Board</h3>
+                        <h3 class="port_title">Job Board like Indeed</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
@@ -222,20 +222,49 @@
                     </div>
                     <div class="portfolio_item">
                         <div class="portfolio_thumb">
-                            <img src="media/about1.jpg" alt="recent work 1">
+                            <img src="media/portfolio.png" alt="recent work 4">
                         </div>
-                        <h3 class="port_title">me test</h3>
+                        <h3 class="port_title">Personal Portfolio Website</h3>
                         <button type="button" class="btn view_proj">View project</button>
                         <div class="detail_proj">
                             <div class="description">
-                                <p>Loremque reit, porro voluptas nostrum iusto?</p>
+                                <p>This is my new portfolio with a new design : Glassmorphism. On this site you will
+                                    find all the different information about me, good visit.</p>
                             </div>
                             <div class="general_info">
                                 <ul>
-                                    <li>Info 4 - <span>info 1 dec</span></li>
-                                    <li>Info 4 - <span>info 1 dec</span></li>
-                                    <li>Info 4 - <span>info 1 dec</span></li>
-                                    <li>Info 1 - <span><a href="" target="_blank">google.com</a></span></li>
+                                    <li>Created - <span>December 2022</span></li>
+                                    <li>Technologies Used - <span>HTML, CSS, JS</span></li>
+                                    <li>Role - <span>Frontend</span></li>
+                                    <li>View online - <span><a
+                                                href="https://github.com/ImMaxence/Glassmorphism-Portfolio"
+                                                target="_blank">the project</a></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="portfolio_item">
+                        <div class="portfolio_thumb">
+                            <img src="media/tkinter.png" alt="recent work 5">
+                        </div>
+                        <h3 class="port_title">GUI with lamp's informations</h3>
+                        <button type="button" class="btn view_proj">View project</button>
+                        <div class="detail_proj">
+                            <div class="description">
+                                <p>It's a scholl project during my final year of my HND. The purpose of the project is
+                                    to manage a solar lamp with a touch screen.
+                                    And on the touch screen we have a interface GUI with tkinter, this GUI can manage
+                                    the solar lamp (for example : ON/OFF);
+                                </p>
+                            </div>
+                            <div class="general_info">
+                                <ul>
+                                    <li>Created - <span>July 2022</span></li>
+                                    <li>Technologies Used - <span>HTML, CSS, Python, C</span></li>
+                                    <li>Role - <span>Frontend, Backend</span></li>
+                                    <li>View online - <span><a
+                                                href="https://github.com/ImMaxence/Scholl-Project-Tkinter-GUI"
+                                                target="_blank">the project</a></span></li>
                                 </ul>
                             </div>
                         </div>
